--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Nicholas Moran",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "chalk": "^2.3.0",
     "express": "^4.16.2"
   }
