--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "415-example",
+  "name": "Phase 1 - cmps 415",
   "version": "1.0.0",
-  "description": "This is for Dr. Burris",
+  "description": "Andrew Sievers Phase 1",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "run": "node server.js"
   },
-  "author": "Nicholas Moran",
-  "license": "ISC",
+  "author": "Andrew Sievers",
+  "license": "lol",
   "dependencies": {
     "body-parser": "^1.18.3",
     "chalk": "^2.3.0",
