had to change name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Phase 1 - cmps 415",
+  "name": "phase1sievers",
   "version": "1.0.0",
   "description": "Andrew Sievers Phase1",
   "main": "server.js",
